<resources>
    <string name="app_name">Carros-Material</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="registrar_carro">Registrar Carro</string>
    <string name="placa2">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="listado">Listar Carros</string>
    <string name="kia">Kia</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="audi">Audi</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="informacion">Información</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>

    <string name="msjGuardar">Carro registrado exitosamente</string>
    <string name="error1">Por favor digitar placa</string>
    <string name="error2">Por favor digitar precio</string>
    <string name="error3">El precio no puede ser cero</string>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar este carro?</string>
    <string name="msj_exito_modificar">¿Está seguro que desea elminar este carro?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="no_vacio_error">Este campo no puede estar vacío</string>
    <string name="persona_existente_error">Ya existe un carro ingresado con esta placa</string>


    <string-array name="opciones">
        <item>@string/registrar_carro</item>
        <item>@string/listado</item>
    </string-array>

    <string-array name="marca">
        <item>@string/kia</item>
        <item>@string/chevrolet</item>
        <item>@string/audi</item>
    </string-array>

    <string-array name="modelo">
        <item>2008</item>
        <item>2009</item>
        <item>2015</item>
    </string-array>

    <string-array name="color">
        <item>@string/rojo</item>
        <item>@string/blanco</item>
    </string-array>
</resources>
